terraform/environments/dev/platform-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: platform-api
  namespace: platform
spec:
  podSelector:
    matchLabels:
      app: platform-api

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: platform
      ports:
        - protocol: TCP
          port: 80
